--- a/Sokoban_P1/Sokoban_P1.csproj
+++ b/Sokoban_P1/Sokoban_P1.csproj
@@ -26,6 +26,9 @@
     <None Update="Content\level1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\level2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
